--- a/style.scss
+++ b/style.scss
@@ -1,2 +1,5 @@
 @import "./flexbox/flexbox";
 @import "./layout/layout";
+@import "./border/border";
+@import "./spacing/spacing";
+@import "./typography/typography";
